# saep

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  audit.toml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.semgrep/: README.md  solana.yml
.well-known/: security.txt
backlog/: P0_capability_registry_localnet_tests.md  P0_pre_audit_hardening.md  P0_test_harness_surfpool_fix.md  P1_agent_template_registry.md  P1_iacp_bus_scaffold.md  P1_protocol_integrations_x402_mcp_sak.md  P1_reputation_graph.md  P1_sdk_typescript_generation.md  P2_depin_compute_bond.md  P2_proof_gen_scaffold.md  P2_retro_airdrop_design.md  README.md
circuits/: .gitignore  README.md  package-lock.json  package.json
docs/: getting-started.md
infra/: render.yaml
programs/agent_registry/: Cargo.toml
programs/agent_registry/src/: civic.rs  errors.rs  events.rs  fuzz.rs  guard.rs  lib.rs  state.rs  svm_fuzz.rs
programs/agent_registry/src/instructions/: authority.rs  governance.rs  guard.rs  init_global.rs  lifecycle.rs  mod.rs  personhood.rs  register_agent.rs  reputation.rs  slash.rs  stake.rs  update_manifest.rs
programs/dispute_arbitration/: Cargo.toml
programs/dispute_arbitration/src/: errors.rs  events.rs  fuzz.rs  guard.rs  lib.rs  state.rs
programs/dispute_arbitration/src/instructions/: arbitrator.rs  dispute.rs  guard_admin.rs  mod.rs  params.rs  resolution.rs  slashing.rs  voting.rs
programs/fee_collector/: Cargo.toml
programs/fee_collector/src/: errors.rs  events.rs  fuzz.rs  guard.rs  hook.rs  lib.rs  state.rs
programs/fee_collector/src/instructions/: agent_hook_allowlist.rs  claim_staker.rs  commit_distribution.rs  execute_burn.rs  guard.rs  hook_allowlist.rs  init_config.rs  mod.rs  process_epoch.rs  record_intake.rs  set_params.rs  sweep_stale.rs
programs/governance_program/: Cargo.toml
programs/governance_program/src/: errors.rs  events.rs  fuzz.rs  lib.rs  state.rs
programs/governance_program/src/instructions/: cancel_expire.rs  execute.rs  finalize.rs  init_config.rs  mod.rs  propose.rs  register_program.rs  vote.rs
programs/nxs_staking/: Cargo.toml
programs/nxs_staking/src/: errors.rs  events.rs  fuzz.rs  guard.rs  lib.rs  state.rs
programs/proof_verifier/: Cargo.toml
programs/proof_verifier/src/: errors.rs  events.rs  fuzz.rs  guard.rs  lib.rs  pairing.rs  state.rs
programs/proof_verifier/src/instructions/: append_vk_ic.rs  authority.rs  batch_verify.rs  guard.rs  init_config.rs  init_vk.rs  mod.rs  register_vk.rs  reputation_cpi.rs  set_paused.rs  verify_proof.rs  vk_activation.rs
programs/task_market/: Cargo.toml
programs/task_market/src/: cpi_stubs.rs  errors.rs  events.rs  fuzz.rs  guard.rs  lib.rs  personhood.rs  state.rs  svm_fuzz.rs
programs/task_market/src/instructions/: allow_payment_mint.rs  authority.rs  cancel_bidding.rs  cancel_unfunded_task.rs  claim_bond.rs  close_bid.rs  close_bid_book.rs  close_bidding.rs  commit_bid.rs  create_task.rs  disputed_timeout_refund.rs  expire.rs  fund_task.rs  governance.rs  guard.rs  init_global.rs  mod.rs  open_bidding.rs  raise_dispute.rs  release.rs  reveal_bid.rs  submit_result.rs  verify_task.rs
programs/template_registry/: Cargo.toml
programs/template_registry/src/: errors.rs  events.rs  fuzz.rs  lib.rs  state.rs
programs/template_registry/src/instructions/: claim_rental_revenue.rs  close_rental.rs  fork_template.rs  init_global.rs  mint_template.rs  mod.rs  open_rental.rs  retire_template.rs  set_global_params.rs  settle_royalty_cpi.rs  update_template.rs
programs/treasury_standard/: Cargo.toml
programs/treasury_standard/proptest-regressions/: state.txt
programs/treasury_standard/src/: errors.rs  events.rs  fuzz.rs  guard.rs  jupiter.rs  lib.rs  state.rs
programs/treasury_standard/src/instructions/: allowed_mints.rs  allowed_targets.rs  authority.rs  close_stream.rs  fund_treasury.rs  governance.rs  guard.rs  init_global.rs  init_stream.rs  init_treasury.rs  mod.rs  pay_task.rs  set_limits.rs  withdraw.rs  withdraw_earned.rs
reports/: 01-bootstrap.md  autonomous-blockers.md  circuit-task-completion-wip.md  internal-audit-2026-04-17.md  internal-audit-offchain-2026-04-17.md  internal-security-audit.md
scripts/: bootstrap.sh  bootstrap_devnet.ts  bundle-size.config.json  buyback-crank.ts  commit-as.sh  init-saep-mint.ts  install-hooks.sh  seed_capabilities.ts  treasury_add_allowed_mint.ts  upload_vk.ts
services/indexer/: .env.example  Cargo.toml  Dockerfile  README.md  render.yaml
services/indexer/examples/: smoke.rs
services/indexer/idl/: capability_registry.json  dispute_arbitration.json
services/indexer/migrations/2026-04-14-000001_init/: down.sql  up.sql
services/indexer/migrations/2026-04-15-000002_sync_cursor/: down.sql  up.sql
services/indexer/migrations/2026-04-16-000003_reputation_rollup/: down.sql  up.sql
services/indexer/migrations/2026-04-16-000004_retro_eligibility/: down.sql  up.sql
services/indexer/migrations/2026-04-17-000005_discovery_views/: down.sql  up.sql
services/indexer/migrations/2026-04-17-000006_heartbeat_presence/: down.sql  up.sql
services/indexer/src/: api.rs  borsh_decode.rs  config.rs  db.rs  discovery.rs  grpc_stream.rs  health.rs  idl.rs  ingest.rs  lib.rs  main.rs  metrics.rs  poller.rs  programs.rs  pubsub.rs  rate_limit.rs  reorg.rs  schema.rs  stats.rs  yellowstone.rs
services/indexer/src/jobs/: matview_refresh.rs  mod.rs  rate_limit_sweeper.rs  reputation_rollup.rs  retro_rollup.rs
services/indexer/src/settlement_worker/: jito_client.rs  mod.rs  nonce_accounts.rs  tip_oracle.rs  tx_builder.rs  worker.rs
services/indexer/tests/: bidding_api.rs  borsh_roundtrip.rs
specs/: 00-overview.md  02-program-capability-registry.md  03-program-agent-registry.md  04-program-treasury-standard.md  05-circuit-task-completion.md  (+29 more)
(+314 files in other folders)
