[package]
name = "agent_registry"
version = "0.1.0"
description = "SAEP agent_registry program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token_2022"] }
capability_registry = { path = "../capability_registry", features = ["cpi"] }
solana-instructions-sysvar = "3.0.0"
solana-keccak-hasher = "2.2.1"

[dev-dependencies]
proptest = "1"
