[package]
name = "dispute_arbitration"
version = "0.1.0"
description = "SAEP dispute arbitration — commit-reveal voting, appeals, slashing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispute_arbitration"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
solana-sha256-hasher = "2.3"

[dev-dependencies]
proptest = "1"
