[package]
name = "fee_collector"
version = "0.1.0"
description = "SAEP fee_collector program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = { version = "1.0.0", features = ["token_2022", "token_2022_extensions"] }
