[package]
name = "governance_program"
version = "0.1.0"
description = "SAEP governance program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = { version = "1.0.0", features = ["token_2022"] }
solana-sha256-hasher = "2.3"

[dev-dependencies]
proptest = "1"
