[package]
name = "nxs_staking"
version = "0.1.0"
description = "SAEP nxs_staking program (stub)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nxs_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"

[dev-dependencies]
proptest = "1"
