[package]
name = "proof_verifier"
version = "0.1.0"
description = "SAEP proof_verifier program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
