[package]
name = "proof_verifier"
version = "0.1.0"
description = "SAEP proof_verifier program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "agent_registry/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
agent_registry = { path = "../agent_registry", features = ["cpi"] }
solana-instructions-sysvar = "3.0.0"
solana-keccak-hasher = "2.2.1"

[dev-dependencies]
proptest = "1"
