[package]
name = "task_market"
version = "0.1.0"
description = "SAEP task_market program (stub)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "task_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
