[package]
name = "task_market"
version = "0.1.0"
description = "SAEP task_market program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "task_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = { version = "1.0.0", features = ["token_2022"] }
solana-keccak-hasher = "2.2.1"
proof_verifier = { path = "../proof_verifier", features = ["cpi"] }
agent_registry = { path = "../agent_registry", features = ["cpi"] }

[dev-dependencies]
proptest = "1"
