[package]
name = "treasury_standard"
version = "0.1.0"
description = "SAEP treasury_standard program (stub)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_standard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
