[package]
name = "treasury_standard"
version = "0.1.0"
description = "SAEP treasury_standard program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_standard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token_2022"] }
agent_registry = { path = "../agent_registry", features = ["cpi"] }

[dev-dependencies]
proptest = "1"
