[workspace]

[package]
name = "saep-indexer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "saep_indexer"
path = "src/lib.rs"

[[bin]]
name = "saep-indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel_migrations = "2.2"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
bs58 = "0.5.1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
borsh = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
prometheus = { version = "0.14", default-features = false }
once_cell = "1.19"
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
